[package]
name = "PatchyVideo-related-video-finder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
actix-web = "3"
bson = "1.2.2"
rust-argon2 = "0.8"
rand = "0.8"
chrono = "0.4"
probabilistic-collections = "0.7"
tokio = {version = "1.7.1", features = ["rt-multi-thread", "macros"]}
wyhash = "0.5.0"
rand_core = "0.6.3"
futures-util = "0.3.15"
colored = "2"
thiserror = "*"

[dependencies.mongodb]
version = "1.2.0"
default-features = false
features = ["async-std-runtime"]

[profile.release]
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
